hair_type/hair_styleをモデルに追加し、複数選択可能にした。検索機能も完了

--- a/app/assets/stylesheets/search_form.scss
+++ b/app/assets/stylesheets/search_form.scss
@@ -48,3 +48,15 @@
     margin-top: 15px;
   }
 }
+
+.search-element-label {
+  margin-bottom: 20px;
+}
+
+#clear-btn {
+  margin-bottom: 30px;
+}
+
+.search-alert-text {
+  margin-bottom: 25px;
+}
